[gd_scene load_steps=8 format=3 uid="uid://qmnutdlpk68l"]

[ext_resource type="PackedScene" uid="uid://diw3xv0en0ynt" path="res://Scene/User Interfaces/UI Asset Components/background_i.tscn" id="1_2sahd"]
[ext_resource type="Script" uid="uid://dg4em0ukvp7ku" path="res://Scene/User Interfaces/UI Scripts/button_manager_start.gd" id="1_nfl2a"]
[ext_resource type="PackedScene" uid="uid://3dgl7l1vwjcq" path="res://Scene/User Interfaces/Story Mode/Story Mode UIs/start_battle_slot.tscn" id="2_t4b46"]
[ext_resource type="FontFile" uid="uid://dtdw2k1jvjn37" path="res://Asset/Fonts/times.ttf" id="2_ygvaf"]
[ext_resource type="Texture2D" uid="uid://cdfpkjhi1gi77" path="res://Asset/User Interface/button_ui.png" id="3_t4b46"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2sahd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_objsq"]

[node name="Start_Battle" type="Node2D"]

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="Background I" parent="Background" instance=ExtResource("1_2sahd")]
layout_mode = 1
offset_bottom = 0.0

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfl2a")

[node name="Story Mode" parent="ButtonManager" instance=ExtResource("2_t4b46")]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 912.0
offset_bottom = 299.0
text = ""
title = "Story Mode"
mode = 0

[node name="Tower Mode" parent="ButtonManager" instance=ExtResource("2_t4b46")]
layout_mode = 0
offset_left = 22.0
offset_top = 326.0
offset_right = 913.0
offset_bottom = 607.0
text = ""
title = "Tower Mode"
mode = 1
availability = true

[node name="Back" type="Button" parent="ButtonManager"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 922.0
offset_top = 21.0
offset_right = 1117.0
offset_bottom = 101.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_ygvaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_2sahd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_objsq")
text = "Back
"
icon = ExtResource("3_t4b46")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="ButtonManager/Story Mode" to="ButtonManager" method="_on_story_mode_pressed"]
[connection signal="pressed" from="ButtonManager/Tower Mode" to="ButtonManager" method="_on_tower_mode_pressed"]
[connection signal="pressed" from="ButtonManager/Back" to="ButtonManager" method="_on_back_pressed"]
